--- a/app.html
+++ b/app.html
@@ -80,13 +80,13 @@
                     <div class="row">
                         <h1>Is <em>your</em> olive evil?</h1>
                         <div class="col mt-3">
-                            <input type="text" class="form-control border-dark" id="userInput"
+                            <input type="text" class="form-control border-dark" id="userString"
                                 placeholder="Enter your word(s) here">
                         </div>
                         <div class="col"></div>
                         <div class="row-5">
                             <div class="row-5">
-                                <button id="submitBtn" type="button"
+                                <button id="btnSubmit" type="button"
                                     class="btn background-color border-dark mt-4 mb-4">Find
                                     Out!</button>
                             </div>
@@ -142,7 +142,7 @@
     <script src="/js/prism.js"></script>
     <script src="/js/site.js"></script>
     <script>
-        document.getElementById("userInput").addEventListener("click", getValue)
+        document.getElementById("btnSubmit").addEventListener("click", getValue)
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
