--- a/code.html
+++ b/code.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>EvilOlive | The Code</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon_browser-tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column h-100" style="background-color:lightgray"></body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <img src="/img/AppIcon-small.png">
+        <img src="/img/AppIcon_small.png">
         <a class="navbar-brand" href="/JavaScriptTemplate/index.html">EvilOlive</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
