--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>EvilOlive: A Coding Challenge</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon-browser_tab.png">
+    <title>EvilOlive | The Code</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/img/AppIcon_browser-tab.png">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column h-100" style="background-color:lightgray">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <img src="/img/AppIcon-small.png" alt="">
+            <img src="/img/AppIcon_small.png" alt="">
             <a class="navbar-brand" href="index.html">EvilOlive</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,16 +80,13 @@
                     </div>
                     <h3 class="fw-bold mt-">Technologies Used </h3>
                     <div class="d-flex">
-                        <div class="row row-cols-4 col-sm-6">
-                            <img src="/img/javascript.png" alt="Javascript">
-                            <img src="img/bootstrap.png" alt="Bootstrap">
-                            <img src="img/html-5.png" alt="HTML5">
-                            <img src="img/css-3.png" alt="CSS">
+                        <div class="row">
+                            <img src="/img/Technologies_used.png" alt="Technologies Used">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/img/Olive01.png" alt="" class="img-fluid">
+                    <img src="/img/AppIcon_large.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -107,11 +104,11 @@
                 </div>
                 <div class="col">
                     <a href="https://www.linkedin.com/in/matt-lane-ab5588108/" target="_blank"><span class="iconify"
-                        data-icon="logos:linkedin-icon" data-inline="false"></span></a>
-                <a href="https://github.com/LaneTrain47" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill"
-                        data-inline="false" style="color: #7a319a"></span></a>
-                <a href="https://twitter.com/LaneTrain47" target="_blank"><span class="iconify" data-icon="logos:twitter"
-                        data-inline="false"></span></a>
+                            data-icon="logos:linkedin-icon" data-inline="false"></span></a>
+                    <a href="https://github.com/LaneTrain47" target="_blank"><span class="iconify"
+                            data-icon="akar-icons:github-fill" data-inline="false" style="color: #7a319a"></span></a>
+                    <a href="https://twitter.com/LaneTrain47" target="_blank"><span class="iconify"
+                            data-icon="logos:twitter" data-inline="false"></span></a>
                 </div>
             </div>
         </div>
