--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="http://mattlane.info">About Me</a>
+                        <a class="nav-link active" href="https://mattlane.info">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -53,13 +53,14 @@
     </main>
 
     <footer class="footer mt-auto py-3 bg-dark">
-        <div class="container-fluid text-center text-secondary">
-            <div class="row">
+        <div class="container-fluid text-center text-light">
+            <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
-                    &copy2021 <span class="text-primary">Matt Lane | Demo Code</span>
+                    &copy2021 <span class="text-light">Matt Lane | <img src="/img/Favicon_small.png" alt="Matt Lane"
+                            class="img-fluid"> | matthewjlane.47@gmail.com
+                    </span>
                 </div>
                 <div class="col">
-                    <span class="text-light text-uppercase"> Matt Lane </span>
                 </div>
                 <div class="col">
                     <a href="https://www.linkedin.com/in/matt-lane-ab5588108/" target="_blank"><span class="iconify"
@@ -69,21 +70,20 @@
                     <a href="https://twitter.com/LaneTrain47" target="_blank"><span class="iconify"
                             data-icon="logos:twitter" data-inline="false"></span></a>
                 </div>
+            </div>
+        </div>
     </footer>
-
-
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
+    <script src="/js/prism.js"></script>
+    <script src="/js/site.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </script>
-
 
 </body>
 
