--- a/code.html
+++ b/code.html
@@ -46,13 +46,13 @@
                 <!-- Items within nav bar -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="app.html">The App</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="code.html">The Code</a>
+                        <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://mattlane.info" target="_blank">About</a>
